# rules_dotnet

./: .bazelignore  .bazelrc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  WORKSPACE  appveyor.yml  azure-pipelines.yml  dotnet-tools.json  internal_deps.bzl  paket.dependencies
docs/: APIReference.md  BUILD  BUILD.bazel  Gemfile  MultiTargetingDesign.md  README.md  ReferenceAssemblies.md  _config.yml  api.md  ci.md  csharp_binary.md  csharp_library.md  csharp_nunit_test.md  csharp_test.md  docs.bzl  docs.md  fsharp_binary.md  fsharp_library.md  fsharp_nunit_test.md  fsharp_test.md  index.md  multiversion.md  multiversion.rst  nuget2bazel.md  nuget_native_deps.md  providers.md  rule.vm  runtime.md  toolchains.md
docs/assets/css/: style.scss
docs/examples/ef/: BUILD  WORKSPACE  nuget.bzl
docs/examples/grpc/: BUILD.bazel  README.rst  SomeServerTest.cs  WORKSPACE
docs/examples/mono/: WORKSPACE
docs/examples/private_nuget/: Test.cs  nuget.bzl
dotnet/: BUILD  BUILD.bazel  core.rst  defs.bzl  deps.bzl  paket2bazel_dependencies.bzl  repositories.bzl  rules_dotnet_dev_nuget_packages.bzl  rules_dotnet_nuget_packages.bzl  toolchain.bzl  toolchains.rst  workspace.rst
dotnet/platform/: BUILD  list.bzl
dotnet/private/: BUILD  BUILD.bazel  BUILD.core.bazel  BUILD.net.bazel  BUILD.sdk.bazel  common.bzl  compiler_wrapper.bat  compiler_wrapper.sh  context.bzl  core_toolchain.bzl  deps.json.tpl  dotnet_toolchain.bzl  launcher.bat.tpl  launcher.sh.tpl  net_empty_toolchain.bzl  net_toolchain.bzl  nugets.bzl  providers.bzl  repositories.bzl  resolved_toolchain.bzl  rids.bzl  runtime.BUILD  runtimeconfig.json.tpl  sdk.bzl  sdk_core.bzl  semver.bzl  toolchains.bzl  toolchains_repo.bzl  valid_platform.bzl  versions.bzl
dotnet/private/actions/: assembly.bzl  assembly_common.bzl  assembly_core.bzl  assembly_net.bzl  csharp_assembly.bzl  fsharp_assembly.bzl  misc.bzl  resolve.bzl  resx.bzl  resx_core.bzl
dotnet/private/frameworks/: net20.BUILD  net40.BUILD  net45.BUILD  net451.BUILD  net452.BUILD  net46.BUILD  net461.BUILD  net462.BUILD  net47.BUILD  net471.BUILD  net472.BUILD  net48.BUILD  net50.BUILD  net60.BUILD  netcoreapp21.BUILD  netcoreapp22.BUILD  netcoreapp30.BUILD  netcoreapp31.BUILD  netstandard20.BUILD  netstandard21.BUILD
dotnet/private/macros/: BUILD.bazel  nuget.bzl  register_rids.bzl  register_tfms.bzl  setup_basic_nuget_package.bzl
dotnet/private/net/: net.BUILD
dotnet/private/rules/: binary.bzl  com_ref.bzl  common.bzl  create_net_workspace.bzl  data_with_dirs.bzl  import.bzl  imports.bzl  library.bzl  library_set.bzl  libraryset.bzl  nuget.bzl  nuget_archive.bzl  nuget_repo.bzl  resource_core.bzl  resx.bzl  runfiles.bzl  stdlib.bzl  template.BUILD  test.bzl  versions.bzl  wrapper.bzl
dotnet/private/stdlib/: 2.1.200-runtime.bzl  2.1.200.bzl  2.1.502-runtime.bzl  2.1.502.bzl  2.1.503-runtime.bzl  2.1.503.bzl  2.2.101-runtime.bzl  2.2.101.bzl  2.2.402-runtime.bzl  2.2.402.bzl  3.0.100-runtime.bzl  3.0.100.bzl  3.1.100-runtime.bzl  3.1.100.bzl  3.1.407-runtime.bzl  3.1.407.bzl  5.0.201-runtime.bzl  5.0.201.bzl  5.0.404-runtime.bzl  5.0.404.bzl  6.0.101-runtime.bzl  6.0.101.bzl
dotnet/private/tests/: BUILD.bazel  utils.bzl
dotnet/private/transitions/: BUILD.bazel  common.bzl  default_transition.bzl  nuget_transition.bzl  tfm_transition.bzl
dotnet/private/wrappers/: dotnet.cc
dotnet/settings/: BUILD.bazel
dotnet/stdlib/: generated.bzl
dotnet/stdlib.core/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.1.200/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.1.502/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.1.503/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.2.101/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.2.402/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v3.0.100/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v3.1.100/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.net/net45/: generated.bzl
dotnet/stdlib.net/net451/: generated.bzl
dotnet/stdlib.net/net452/: generated.bzl
dotnet/stdlib.net/net46/: generated.bzl
dotnet/stdlib.net/net461/: generated.bzl
dotnet/stdlib.net/net462/: generated.bzl
dotnet/stdlib.net/net47/: generated.bzl
dotnet/stdlib.net/net471/: generated.bzl
dotnet/stdlib.net/net472/: generated.bzl
dotnet/stdlib.net/net48/: generated.bzl
dotnet/toolchain/: BUILD.bazel  toolchains.bzl
dotnet/tools/common/: manifest.c  manifest.h  misc.c
dotnet/tools/copy/: BUILD
dotnet/tools/empty/: BUILD
dotnet/tools/launcher_core/: BUILD  main.c
dotnet/tools/launcher_core_nunit3/: BUILD  main.c
dotnet/tools/launcher_core_xunit/: BUILD  main.c
examples/: .bazelrc  (+6 more)
examples/aspnetcore/: BUILD.bazel  Program.cs  WeatherForecast.cs
examples/basic_csharp/: BUILD  BUILD.bazel
examples/basic_fsharp/: BUILD  BUILD.bazel  hello.fs  lib.fs  libtest.fs
examples/expecto/: BUILD  BUILD.bazel  main.fs  test.fs
examples/fsharp_type_provider/: BUILD.bazel  Main.fs
examples/grpc/: BUILD.bazel  WORKSPACE  nuget2config.json
examples/netstandard2.0/: BUILD.bazel
examples/paket/: BUILD.bazel  Main.fs  dotnet-tools.json  paket.dependencies  paket.fsproj  paket.references  paket2bazel.config.json  update-deps.sh
examples/publish_framework_dependent/: BUILD.bazel
examples/publish_self_contained/: BUILD.bazel
examples/runfiles_csharp/: BUILD.bazel  RunfilesTest.cs
examples/runfiles_fsharp/: BUILD.bazel  RunfilesTest.fs
examples/type_providers/: .gitignore  BUILD.bazel  WORKSPACE  main_test.fs
tests/: BUILD.bazel  bazel_tests.bzl  dependencies.bzl
tests/nuget_structure/: BUILD.bazel  README.md  nuget_structure_test.bzl
tests/testlib/: BUILD  BazelTestBase.cs
tools/paket2bazel/: BUILD.bazel  Gen.fs  Main.fs  Models.fs  Paket.fs  README.md  paket.dependencies  paket.references  paket2bazel.fsproj
tools/runfiles/: BUILD.bazel  Runfiles.cs  Runfiles.csproj
(+249 files in other folders)
