load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

###################
# C# Specific docs
###################
stardoc_with_diff_test(
    name = "csharp_library",
    bzl_library_target = "//dotnet/private/rules/csharp:library",
)

stardoc_with_diff_test(
    name = "csharp_binary",
    bzl_library_target = "//dotnet/private/rules/csharp:binary",
)

stardoc_with_diff_test(
    name = "csharp_nunit_test",
    bzl_library_target = "//dotnet/private/rules/csharp:binary",
)

stardoc_with_diff_test(
    name = "csharp_test",
    bzl_library_target = "//dotnet/private/rules/csharp:binary",
)

####################
# F# specific docs
####################
stardoc_with_diff_test(
    name = "fsharp_library",
    bzl_library_target = "//dotnet/private/rules/fsharp:library",
)

stardoc_with_diff_test(
    name = "fsharp_binary",
    bzl_library_target = "//dotnet/private/rules/fsharp:binary",
)

stardoc_with_diff_test(
    name = "fsharp_nunit_test",
    bzl_library_target = "//dotnet/private/rules/fsharp:binary",
)

stardoc_with_diff_test(
    name = "fsharp_test",
    bzl_library_target = "//dotnet/private/rules/fsharp:binary",
)

update_docs(name = "update")

########
# NuGet
########
stardoc_with_diff_test(
    name = "nuget_archive",
    bzl_library_target = "//dotnet/private/rules/nuget:nuget_archive",
)

stardoc_with_diff_test(
    name = "nuget_repo",
    bzl_library_target = "//dotnet/private/rules/nuget:nuget_repo",
)

##############
# Publishing
##############
stardoc_with_diff_test(
    name = "publish_binary",
    bzl_library_target = "//dotnet/private/rules/publish_binary:publish_binary",
)
