load(
    "//dotnet/private:macros/register_tfms.bzl",
    "register_tfms",
)

exports_files(
    [
        "defs.bzl",
        "repositories.bzl",
    ],
    visibility = ["//docs:__pkg__"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

register_tfms()
