load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "launcher.sh.tpl",
        "launcher.bat.tpl",
        "compiler_wrapper.sh",
        "compiler_wrapper.bat",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux-x64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux-arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos-x64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "macos-arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "windows-x64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows-arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:windows",
    ],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        ":providers",
        "@aspect_bazel_lib//lib:paths",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)

bzl_library(
    name = "rids",
    srcs = ["rids.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)
