package(default_visibility = ["//visibility:public"])

filegroup(
    name = "csc",
    srcs = ["core/sdk/{sdkVersion}/Roslyn/bincore/csc.dll"],
    data = glob([
        "core/sdk/{sdkVersion}/Roslyn/bincore/**/*",
    ]),
)

filegroup(
    name = "fsc",
    srcs = ["core/sdk/{sdkVersion}/FSharp/fsc.exe"],
    data = glob([
        "core/sdk/{sdkVersion}/FSharp/**/*",
    ]),
)

filegroup(
    name = "sdk_fsharp_runtime_deps",
    srcs = glob(["core/sdk/{sdkVersion}/FSharp/*.dll"]),
)

filegroup(
    name = "sdk_lib",
    srcs = glob([
        "core/sdk/{sdkVersion}/**/*",
    ]),
)

filegroup(
    name = "host",
    srcs = glob([
        "core/host/fxr/{runtimeVersion}/*",
    ]),
)

#exports_files(glob(["core/**/*.dll"]))

filegroup(
    name = "runner",
    srcs = select({
        "@bazel_tools//src/conditions:windows": ["core/dotnet.exe"],
        "//conditions:default": ["core/dotnet"],
    }),
    data = glob(["core/host/**/*"]),
)

#filegroup(
#    name = "csc_deps",
#    srcs = glob(["core/**/bincore/*.dll"], exclude=["core/**/bincore/csc.dll"]),
#)


filegroup(
    name = "shared",
    srcs = glob([
        "core/shared/**/*",
    ]),
)

#exports_files(glob(["core/shared/**/*"]))
#exports_files(glob(["core/**/bincore/csc.dll"]))

load("@io_bazel_rules_dotnet//dotnet/private:stdlib/{sdkVersion}.bzl", "define_stdlib")
define_stdlib()

load("@io_bazel_rules_dotnet//dotnet/private:stdlib/{sdkVersion}-runtime.bzl", "define_runtime")
define_runtime()
