package(default_visibility = ["//visibility:public"])

filegroup(
    name = "mcs_bin",
    srcs = glob([
        "mcs_bin/*",
    ]),
)

filegroup(
    name = "mono_bin",
    srcs = glob([
        "mono_bin/*",
    ]),
)

filegroup(
    name = "lib",
    srcs = glob([
        "lib/**/*",
    ]),
)

filegroup(
    name = "shared",
    srcs = glob([
        "shared/**/*",
    ]),
)

filegroup(
    name = "host",
    srcs = glob([
        "host/**/*",
    ]),
)

filegroup(
    name = "runner",
    srcs = select({
        "@bazel_tools//src/conditions:windows": ["mono_bin/mono.exe"],
        "//conditions:default": ["mono_bin/mono"],
    }),
    data = select({
        "@bazel_tools//src/conditions:windows": glob(["mono_bin/**/*.dll"]),
        "//conditions:default": glob(["mono_bin/**/*.so"]),
    }),
)

filegroup(
    name = "csc",
    srcs = glob(["mono/**/4.5/mcs.exe"]),
)

