load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_test",
)

fsharp_test(
    name = "expecto_example.dll",
    srcs = [
        # keep order
        "test.fs",
        "main.fs",
    ],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [
        "@example_deps//expecto",
        "@example_deps//fsharp.core",
    ],
)
