load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "csharp_xunit_test")
load("@rules_proto_grpc//csharp:defs.bzl", "csharp_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "service_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

csharp_grpc_library(
    name = "service_proto.dll",
    protos = [":service_proto"],
    visibility = ["//visibility:public"],
)

csharp_xunit_test(
    name = "some_server_test.dll",
    size = "medium",
    srcs = [
        "SomeServerTest.cs",
    ],
    deps = [
        ":service_proto.dll",
        "@grpc.core//:lib",
        "@grpc.healthcheck//:lib",
        "@xunit.assert//:lib",
        "@xunit.extensibility.core//:lib",
        "@xunit.extensibility.execution//:lib",
    ],
)
