load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
    "csharp_nunit_test",
)

csharp_nunit_test(
    name = "lib_test",
    srcs = ["libtest.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [
        ":lib",
    ],
)

csharp_library(
    name = "lib",
    srcs = ["lib.cs"],
    internals_visible_to = ["lib_test"],
    target_frameworks = ["netstandard2.0"],
    targeting_packs = [
        "@example_deps//netstandard.library",
    ],
    deps = [],
)
