load("@rules_dotnet//dotnet:defs.bzl", "fsharp_binary")

fsharp_binary(
    name = "paket_example.exe",
    srcs = [
        # Keep order
        "Main.fs",
    ],
    tags = ["requires-network"],
    target_frameworks = ["net6.0"],
    deps = [
        "@paket.main//argu",
        "@paket.main//fsharp.core",
        "@paket.main//fsharp.data",
        "@paket.main//microsoft.netcore.app.ref",
    ],
)

# NOTE: Do not mix package groups. Mixing package groups can lead to unexpected results.
fsharp_binary(
    name = "paket_example_with_dependency_group.exe",
    srcs = [
        # Keep order
        "Main.fs",
    ],
    tags = ["requires-network"],
    target_frameworks = ["net6.0"],
    deps = [
        "@paket.othergroup//argu",
        "@paket.othergroup//fsharp.core",
        "@paket.othergroup//fsharp.data",
        "@paket.othergroup//microsoft.netcore.app.ref",

    ],
)
