load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_nunit_test",
)

csharp_nunit_test(
    name = "runfiles_test",
    srcs = ["RunfilesTest.cs"],
    data = ["data-file"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [
        "@rules_dotnet//tools/runfiles",
    ],
)
