load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "fsharp_xunit_test")

fsharp_xunit_test(
    name = "type_provider_test.dll",
    srcs = [
        "main_test.fs",
    ],
    # NOTE: Design time resources are not transitively passed from libraries
    # If you use any of the generated types from the library you will need
    # to add the design time resources to the consuming library
    design_time_resources = ["//type_provider_lib:foo.json"],
    deps = [
        "//type_provider_lib:lib.dll",
        "@core_sdk_stdlib//:libraryset",
        "@xunit.assert//:lib",
        "@xunit.extensibility.core//:lib",
        "@xunit.extensibility.execution//:lib",
    ],
)
