load("@rules_dotnet//dotnet:defs.bzl", "fsharp_binary")

fsharp_binary(
    name = "paket2bazel.exe",
    srcs = [
        # Keep order
        "Models.fs",
        "Paket.fs",
        "Gen.fs",
        "Main.fs",
    ],
    private_deps = [
        "@paket.paket2bazel//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net6.0"],
    deps = [
        "@paket.paket2bazel//argu",
        "@paket.paket2bazel//chessie",
        "@paket.paket2bazel//fsharp.core",
        "@paket.paket2bazel//fsharp.systemtextjson",
        "@paket.paket2bazel//fsharpx.collections",
        "@paket.paket2bazel//fsharpx.extras",
        "@paket.paket2bazel//nuget.frameworks",
        "@paket.paket2bazel//nuget.packagemanagement",
        "@paket.paket2bazel//nuget.packaging",
        "@paket.paket2bazel//nuget.versioning",
        "@paket.paket2bazel//paket.core",
        "@paket.paket2bazel//system.text.json",
    ],
)
