load("@rules_dotnet//dotnet:defs.bzl", "fsharp_binary")

fsharp_binary(
    name = "paket2bazel.exe",
    srcs = [
        # Keep order
        "Models.fs",
        "Paket.fs",
        "Gen.fs",
        "Main.fs",
    ],
    private_deps = [
        "@paket2bazel_dependencies//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net6.0"],
    deps = [
        "@paket2bazel_dependencies//argu",
        "@paket2bazel_dependencies//chessie",
        "@paket2bazel_dependencies//fsharp.core",
        "@paket2bazel_dependencies//fsharp.systemtextjson",
        "@paket2bazel_dependencies//fsharpx.collections",
        "@paket2bazel_dependencies//fsharpx.extras",
        "@paket2bazel_dependencies//nuget.frameworks",
        "@paket2bazel_dependencies//nuget.packagemanagement",
        "@paket2bazel_dependencies//nuget.packaging",
        "@paket2bazel_dependencies//nuget.versioning",
        "@paket2bazel_dependencies//paket.core",
        "@paket2bazel_dependencies//system.text.json",
    ],
)
