load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "runfiles",
    srcs = ["Runfiles.cs"],
    private_deps = [
        "@rules_dotnet_nuget_packages//netstandard.library.ref",
    ],
    target_frameworks = ["netstandard2.1"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
