load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "runfiles",
    srcs = ["Runfiles.cs"],
    target_frameworks = ["netstandard2.0"],
    targeting_packs = [
        "@rules_dotnet_nuget_packages//netstandard.library",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
