load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "runfiles",
    srcs = ["Runfiles.cs"],
    private_deps = [
        "@rules_dotnet_nuget_packages//netstandard.library",
    ],
    target_frameworks = ["netstandard2.0"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
