load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "register_rids",
    srcs = ["register_rids.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        "//dotnet/private:rids",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "register_tfms",
    srcs = ["register_tfms.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        "//dotnet/private:common",
        "//dotnet/private:rids",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//rules:common_settings",
    ],
)
