load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        "//dotnet/private:common",
        "//dotnet/private:rids",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "tfm_transition",
    srcs = ["tfm_transition.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        ":common",
        "//dotnet/private:common",
        "//dotnet/private:rids",
        "@bazel_skylib//lib:dicts",
    ],
)
