load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_library",
)

fsharp_library(
    name = "type_provider_lib",
    srcs = ["Lib.fs"],
    # Files used by type providers at compile time need to be put here
    compile_data = ["foo.json"],
    internals_visible_to = ["lib_test"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    visibility = ["//fsharp_type_provider:__subpackages__"],
    deps = [
        "@example_deps//fsharp.core",
        "@example_deps//fsharp.data",
    ],
)
